--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <body>
-    <h1>Predict STI</h1>
+    <h1>Predict Bond Index</h1>
     <form action="/" method="post">
         <p>Please enter BAMLCC0A0CMTRIV : </p>
         <p><input type="number" step="0.1" name="Index"></p>
         <p><input type="submit" value="Enter"></p>
     </form>
-    <p>{{result1}}</p>
+    <p>Result of AR2 is : {{result1}}</p>
 
 </body>
 
