--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 <body>
     <h1>Predict Bond Index</h1>
     <form action="/" method="post">
-        <p>Please enter BAMLCC0A0CMTRIV : </p>
-        <p><input type="number" step="0.1" name="Index"></p>
+        <p>Please enter start and end: </p>
+        <p><input type="number" step="0.1" name="start"></p>
+        <p><input type="number" step="0.1" name="end"></p>
         <p><input type="submit" value="Enter"></p>
     </form>
     <p>Result of AR2 is : {{result1}}</p>
